test_yaml4.0/deployment_tomcat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tomcat
      name: was
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: tomcat
        name: was
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: tomcat
      containers:
      - image: sinhye/tomcat:v2.0
        name: tomcat
        ports:
        - containerPort: 8080
        #volumeMounts:
        #- mountPath: "/opt/tomcat/webapps"
        #  name: html
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 200m
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
      #volumes:
      #  - name: html
       #   persistentVolumeClaim:
       #     claimName: pvc-tomcat
